Fixed internship dates, enhancing grammer and adding detail.
* Fixed Internship Date!  Was a year too long!
* Added description for DigiPen
* Removed underline for links in CSS
* Added end dates for all dates
* Changed April to shorthand to be uniform.

--- a/style.less
+++ b/style.less
@@ -2,6 +2,10 @@
 //    outline:1px blue solid;
 // } 
 
+a {
+    text-decoration: none;
+}
+
 h1 {
     font-size: 72px;
 }
@@ -154,7 +158,7 @@ h3 {
     a:hover
     {
         color: blue;
-        text-decoration: underline;
+        text-decoration: none;
     }
 }
 
